--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Ricomida</title>
+    <title>Dudu | Salón</title>
     <link
       rel="stylesheet"
       href="https://stackpath.bootstrapcdn.com/bootstrap/4.1.3/css/bootstrap.min.css"
@@ -29,9 +29,9 @@
     <link rel="stylesheet" href="assets/css/style.css" />
   </head>
   <body>
-    <nav class="navbar navbar-expand-md navbar-dark bg-dark text-white fixed-top">
+    <nav class="navbar navbar-expand-md fixed-top">
       <div class="container">
-        <a class="navbar-brand logo-text  lobster-font">Ricomida</a>
+        <a class="navbar-brand logo-text  lobster-font"><img width="80rem" src="assets/img/dudu_manos.jpeg" /></a>
         <button
           class="navbar-toggler"
           type="button"
@@ -46,15 +46,15 @@
         <div class="collapse navbar-collapse" id="navbarSupportedContent">
           <ul class="navbar-nav ml-auto">
             <li class="nav-item">
-              <a class="nav-link" href="#about"
+              <a class="nav-link" href="#start"
                 >Inicio <span class="sr-only">(current)</span></a
               >
             </li>
             <li class="nav-item">
-              <a class="nav-link" href="#work">Recetas</a>
+              <a class="nav-link" href="#work">Trabajos</a>
             </li>
             <li class="nav-item">
-              <a class="nav-link" href="#work">Nosotros</a>
+              <a class="nav-link" href="#us">Nosotros</a>
             </li>
             <li class="nav-item">
               <a class="nav-link" href="#contact">Contacto</a>
@@ -63,53 +63,17 @@
         </div>
       </div>
     </nav>
-    <header class="my-5 pt-2">
+    <header id="start" class="my-5 pt-2">
       <div class="container mt-5">
         <div class="row mt-5">
-          <div class="col-sm-12 col-lg-6">
+          <div class="col-sm-12">
             <hr class="mb-4 bg-dark d-block d-sm-block d-lg-none d-md-none">
             <img
-              src="assets/img/principal.jpg"
-              class="img-fluid"
-              width="100%"
+              src="assets/img/logo.jpeg"
+              class="img-fluid d-block mx-auto w-50"
               alt="Imagen principal"
             />
-          </div>
-          <div
-            class="col-sm-12 col-lg-6 text-center"
-          >
-            <h1 class="text-uppercase text-lg-left font-weight-bold display-5">
-              Pizza al estilo chicago con espinacas y champiñones
-            </h1>
-            <hr class="mt-4 mb-2 bg-dark" />
-            <p
-              class="subtitle text-uppercase font-weight-bold text-lg-left"
-              
-            >
-              110 min / 6 a 8 porciones
-            </p>
-            <div class="mt-3 text-lg-left">
-              <button
-                id="enviarCorreo"
-                class="btn btn-sm btn-outline-secondary mr-3"
-                data-bs-tooltip=""
-                data-placement="bottom"
-                data-toogle="tooltip"
-                title="Presiona para enviar por correo"
-              >
-                Enviar por correo
-              </button>
-              <button
-                class="btn btn-sm btn-outline-secondary"
-                data-bs-tooltip=""
-                data-placement="right"
-                data-toogle="tooltip"
-                title="Agrega esta receta a tus favoritos"
-              >
-                Añadir a favoritos
-              </button>
-            </div>
-          </div>
+          </div>      
         </div>
       </div>
     </header>
@@ -126,28 +90,28 @@
                 <div class="col-lg-3">
                   <img
                     class="d-inline-block w-100"
-                    src="assets/img/slider-1.png"
+                    src="assets/img/dudu_manos.jpeg"
                     alt="First slide"
                   />
                 </div>
                 <div class="col-lg-3">
                   <img
                     class="d-inline-block w-100"
-                    src="assets/img/slider-2.png"
+                    src="assets/img/dudu_pared.jpeg"
                     alt="First slide"
                   />
                 </div>
                 <div class="col-lg-3">
                   <img
                     class="d-inline-block w-100"
-                    src="assets/img/slider-3.png"
+                    src="assets/img/dudu_manos.jpeg"
                     alt="First slide"
                   />
                 </div>
                 <div class="col-lg-3">
                   <img
                     class="d-inline-block w-100"
-                    src="assets/img/slider-4.png"
+                    src="assets/img/dudu_pared.jpeg"
                     alt="First slide"
                   />
                 </div>
@@ -158,28 +122,28 @@
                 <div class="col-lg-3">
                   <img
                     class="d-inline-block w-100"
-                    src="assets/img/slider-5.png"
+                    src="assets/img/dudu_pared.jpeg"
                     alt="First slide"
                   />
                 </div>
                 <div class="col-lg-3">
                   <img
                     class="d-inline-block w-100"
-                    src="assets/img/slider-6.png"
+                    src="assets/img/dudu_vela.jpeg"
                     alt="First slide"
                   />
                 </div>
                 <div class="col-lg-3">
                   <img
                     class="d-inline-block w-100"
-                    src="assets/img/slider-7.png"
+                    src="assets/img/dudu_pared.jpeg"
                     alt="First slide"
                   />
                 </div>
                 <div class="col-lg-3">
                   <img
                     class="d-inline-block w-100"
-                    src="assets/img/slider-8.png"
+                    src="assets/img/dudu_vela.jpeg"
                     alt="First slide"
                   />
                 </div>
@@ -212,31 +176,13 @@
             <div class="row pb-4">
               <div class="col-12">
                 <h3  class="text-uppercase border-bottom d-inline border-dark pb-2">
-                  Ingredientes
+                  Dudu Title
                 </h3>
               </div>
             </div>
             <div class="row">
               <div class="col-12">
-                <p class="mb-4 font-weight-bold">Masa</p>
-                <p class="font-weight-bold">20 gr de lavadura seca instantánea</p>
-                <p class="font-weight-bold">1 cucharadita de azúcar</p>
-                <p class="font-weight-bold">500 ml de agua tibia</p>
-                <p class="font-weight-bold">100 ml de aceite vegetal</p>
-                <p class="font-weight-bold">4 cucharadas de aceite de oliva</p>
-                <p class="font-weight-bold">65 gr harina de maíz fina (chuchoca)</p>
-                <p class="font-weight-bold">2 cucharaditas de sal</p>
-                <p class="font-weight-bold">625 gr harina</p>
-                <p class="font-weight-bold">Salsa</p>
-                <p class="mt-4 font-weight-bold">5 cucharadas de aceite de oliva</p>
-                <p class="font-weight-bold">1/2 cebolla picada en cubos finos</p>
-                <p class="font-weight-bold">2 cucharaditas de sal</p>
-                <p class="font-weight-bold">3 cucharadas de Orégano Gourmet</p>
-                <p class="font-weight-bold">1 1/2 cucharadas de Albahaca Gourmet</p>
-                <p class="font-weight-bold">2 tarros de tomates en cubos al natural</p>
-                <p class="font-weight-bold">2 cucharaditas de azúcar</p>
-                <p class="font-weight-bold">Relleno</p>
-                <p class="mt-4 font-weight-bold">1/2 cebolla en cubos</p>
+                <p class="mb-4 font-weight-bold">Lorem ipsum, dolor sit amet consectetur adipisicing elit. Deserunt et pariatur placeat quisquam id delectus praesentium, alias sit sed dignissimos unde nemo beatae aut dolore non earum nostrum at doloribus.</p>
               </div>
             </div>
           </div>
@@ -244,18 +190,13 @@
             <div class="row pb-4">
               <div class="col-12">
                 <h3 class="text-uppercase border-bottom d-inline border-dark pb-2">
-                  Preparación
+                  Dudu Title
                 </h3>
               </div>
             </div>
             <div class="row">
               <div class="col-12">
-                <p class="mt-3 font-weight-bold">1.Para la masa, disolver la levadura y el azúcar en agua tibia en un bol grande. Dejar reposar 2 minutos. Agregar el aceite, la harina de maíz, sal y 400gr de harina. Mezclar bien. Amasar y agregar el resto de harina, la cantidad necesaria para tener una masa blanda. Poner en el mesón y amasar por 5 minutos o hasta tener una masa lisa y elástica (agregar harina en el mesón a medida que se va amasando para que la masa no se pegue). Poner la masa en un bol aceitado, tapar con un paño de cocina limpio y dejar reposar hasta que la masa duplique su volumen (leudar). Golpear la masa para que baje y luego dejar leudar por 40 minutos adicionales.</p>
-                <p class="mt-4 font-weight-bold">2.Mientras tanto preparar la salsa: Calentar 4 cucharadas de aceite en una olla a fuego medio. Agregar la cebolla, Orégano Gourmet, Albahaca Gourmet, sal y cocinar hasta que la cebolla esté dorada. Agregar el ajo y cocinar por 30 segundos. Agregar los tomates junto al jugo del tarro, a la mezcla de cebolla. Agregar el azúcar y cocinar hasta que la mezcla se haya reducido y espesado, como 30 minutos. Sazonar con sal y pimienta a gusto. Reservar.</p>
-                <p class="mt-4 font-weight-bold">3.Relleno. Cocinar las chalotas en el aceite de oliva hasta que estén transparentes. Agregar los champiñones y las espinacas, cocinar hasta que estén cocidos y se haya evaporado todo el líquido que hayan votado los vegetales. Reservar.</p>
-                <p class="mt-4 font-weight-bold">4.Calentar al horno a 220C.</p>
-                <p class="mt-4 font-weight-bold">5.Una vez que la masa haya reposado, dividirla en dos bolas. Estirar cada masa para cubrir dos moldes (desmontables) de 26 cm, hacer un borde de 5 cm con la masa. Dividir el relleno entre las dos pizza, tapar con el queso mozarella, luego terminar con la salsa de tomates y finalmente espolvorear el queso rallado.</p>
-                <p class="mt-4 font-weight-bold">6. Hornear por 35 a 40 minutos o hasta que el relleno esté caliente y la base esté esponjosa y dorada. Esperar unos minutos antes de desmoldar.</p>
+                <p class="font-weight-bold">Lorem ipsum dolor sit amet consectetur adipisicing elit. Unde ratione, accusantium cumque, voluptate dolor similique in iure esse nesciunt obcaecati nobis qui minus quidem libero. Cupiditate quae incidunt iusto eveniet.</p>
               </div>
             </div>
           </div>
@@ -263,26 +204,26 @@
         <hr class="mt-5 bg-dark" />
       </div>
     </section>
-    <section id="related-recipes">
+    <section id="work">
       <div class="container pb-5">
         <div class="row mt-4">
           <div class="col-12">
-            <h2 class="text-uppercase font-weight-bold h1 text-center">Recetas relacionadas</h2>
+            <h2 class="text-uppercase font-weight-bold h1 text-center">Trabajos destacados</h2>
           </div>
         </div>
         <div class="row mt-5">
           <div class="col-lg-4 col-md-3 col-sm-12 mb-5">
             <div class="card w-100" style="width: 18rem;">
-              <img class="card-img-top" src="assets/img/recipe-card-1.png" alt="Card image cap">
+              <img class="card-img-top" src="assets/img/dudu_manos.jpeg" alt="Card image cap">
               <div class="card-body">
-                <h5 class="card-title text-uppercase font-weight-bold h3">Panqueques con manjar y crema</h5>
-                <p class="card-text">Some quick example text to build on the card title and make up the bulk of the card's content.</p>
+                <h5 class="card-title text-uppercase font-weight-bold h3">CArd Title</h5>
+                <p class="card-text">Some quick example text to build on the card title and make up the bulk of the card's content. Some quick example text to build on the card title.</p>
               </div>
             </div>
           </div>
           <div class="col-lg-4 col-md-3 col-sm-12 mb-5">
             <div class="card w-100" style="width: 18rem;">
-              <img class="card-img-top" src="assets/img/recipe-card-2.png" alt="Card image cap">
+              <img class="card-img-top" src="assets/img/dudu_manos.jpeg" alt="Card image cap">
               <div class="card-body">
                 <h5 class="card-title text-uppercase font-weight-bold h3">Card title</h5>
                 <p class="card-text">Some quick example text to build on the card title and make up the bulk of the card's content. Some quick example text to build on the card title.</p>
@@ -291,7 +232,7 @@
           </div>
           <div class="col-lg-4 col-md-3 col-sm-12 mb-5">
             <div class="card w-100" style="width: 18rem;">
-              <img class="card-img-top" src="assets/img/recipe-card-3.png" alt="Card image cap">
+              <img class="card-img-top" src="assets/img/dudu_manos.jpeg" alt="Card image cap">
               <div class="card-body">
                 <h5 class="card-title text-uppercase font-weight-bold h3">Card title</h5>
                 <p class="card-text">Some quick example text to build on the card title and make up the bulk of the card's content. Some quick example text to build on the card title.</p>
@@ -301,15 +242,48 @@
         </div>
       </div>
     </section>
-    <section class="bg-danger">
+    <section id="us" class="section-news-letter">
       <div class="container-fluid text-white text-center pb-5">
-        <h2 class="text-uppercase pt-5 mt-5">Suscríbete en nuestro newsletter</h2>
-        <p class="h4 mt-2 mb-5">y optén las mejores recetas que tenemos en <span class="lobster-font">Ricomida</span></p>
-        <button class="btn btn-outline-secondary text-white border-white mb-5 px-5">Empezar</button>
+        <h2 class="text-uppercase pt-5 mt-5">Lorem ipsum, dolor sit amet consectetur</h2>
+        <p class="h4 mt-2 mb-5">Lorem ipsum dolor sit amet, consectetur adipisicing elit. Illum temporibus voluptatem dolorem</span></p>
+        <button class="btn btn-outline-secondary text-white border-white mb-5 px-5">Lorem</button>
       </div>
     </section>
-    <footer class="bg-dark text-white">
-      <h2 class="lobster-font logo-text py-5 text-center ">Ricomida</h2>
+    <section id="contact" class="container my-5">
+      <h2 class="display-3 font-weight-bold text-center my-4">Contáctame</h2>
+      <p class="my-4 text-center">
+        Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod
+        tempor incididunt ut labore et dolore magna aliqua.
+      </p>
+      <form>
+        <div class="form-group">
+          <label for="formGroupExampleInput">Nombre</label>
+          <input type="text" class="form-control" id="formGroupExampleInput" placeholder="Nombre">
+          </div>
+        <div class="form-group">
+          <label for="exampleInputEmail1">Ingresa tu correo electrónico</label>
+          <input
+            type="email"
+            class="form-control"
+            id="exampleInputEmail1"
+            aria-describedby="emailHelp"
+            placeholder="Correo electrónico"
+          />
+          <small id="emailHelp" class="form-text text-muted"
+            >We'll never share your email with anyone else.
+          </small>
+        </div>
+        <div class="form-group ">
+          <label for="exampleFormControlTextarea1">Example textarea</label>
+          <textarea class="form-control" id="exampleFormControlTextarea1" rows="3"></textarea>
+          </div>
+          <div class="contact-button-inner text-right">
+            <button type="button" class="btn  btn-outline-default px-5">Enviar</button>
+            </div>
+      </form>
+    </section>
+    <footer class="footer">
+      <img src="assets/img/dudu_manos_2.jpeg" class="d-block mx-auto py-5" width="170rem" />
     </footer>
 
 
